--- a/app/styles/app/base.css
+++ b/app/styles/app/base.css
@@ -8,6 +8,7 @@ $light-grey: #E3E6EA;
 html, body {
   margin: 0px;
   font-family: "Avenir Next", 'Avenir', Helvetica, sans-serif;
+  font-weight: 400;
   height: 100%;
   min-height: 100%;
   max-height: 100%;
