Move save buttons

--- a/app/templates/assignments/new.hbs
+++ b/app/templates/assignments/new.hbs
@@ -1,12 +1,19 @@
 {{root-nav}}
 
 <div class="flex fill with_columns">
-
   <div class="flex fill">
     <div class="list-container flex with_columns">
       <div class="card">
         <div class="card-container">
-          <h3>Create Assignment</h3>
+          <div class="flex">
+            <div class="flex fill">
+              <h3>Create Assignment</h3>
+            </div>
+            <div class="flex end">
+              <button {{action "saveDraft"}}>Save draft</button>
+              <button {{action "saveAssignment"}}>Create</button>
+            </div>
+          </div>
           {{list-splitter name="General"}}
         </div>
 
@@ -43,21 +50,4 @@
       </div>
     </div>
   </div>
-  <div class="flex flex-end assignment-creator-progress">
-    <div class="flex">
-      <button {{action "decrementStep"}}>Back</button>
-    </div>
-    <div class="flex fill flex-center">
-      {{assignment-creator-progress-item number="2" label="DETAILS"}}
-      {{assignment-creator-progress-item number="1" label="DUE DATE"}}
-      {{assignment-creator-progress-item number="3" label="SUBMISSION"}}
-      {{assignment-creator-progress-item number="4" label="REVIEW"}}
-    </div>
-    <div class="flex">
-      <button {{action "saveDraft"}}>Save draft</button>
-      <button {{action "saveAssignment"}}>Create</button>
-    </div>
-  </div>
-
-
 </div>
