Add WYSIWYG and Markdown editors to assignment creator

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,5 @@
+// External CSS files
+@import "../../bower_components/fontawesome/css/font-awesome";
+// Internal CSS files
 @import "app/base";
 @import "app/nav";
