[WIP] Query student assignments for calendar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 // External CSS files
 @import "../../bower_components/fontawesome/css/font-awesome";
+@import "ember-power-calendar";
 // Internal CSS files
 @import "app/base";
 @import "app/nav";
