--- a/app/templates/courses/show/discussions/index.hbs
+++ b/app/templates/courses/show/discussions/index.hbs
@@ -1,6 +1,6 @@
 <div class="card-container">
   <div class="flex end">
-  {{link-to 'New Topic' class='btn btn-primary'}}
+  {{link-to 'New Topic' (query-params forum_id=model.forum.id) class='btn btn-primary'}}
   </div>
 
   <div class="splitter flex fill flex-center">
@@ -12,6 +12,40 @@
 <ul class="list list-normal flex with_columns">
   {{#each model.assignments as |assignment|}}
     {{#link-to 'courses.show.discussions.topic.show' assignment class='list-normal-item block'}}
+      <span class="pre-link">{{assignment.dueDate}}</span>
+      <h3>{{assignment.name}}</h3>
+      <p>The assignmet description will appear here</p>
+    {{/link-to}}
+  {{/each}}
+</ul>
+
+
+
+
+<div class="card-container">
+  <div class="flex end">
+  {{link-to 'New Assignment' 'assignments.new' (query-params course_id=model.id) class='btn btn-primary'}}
+  </div>
+
+  <div class="splitter flex fill flex-center">
+    <span class="splitter-text">Active</span>
+    <span class="flex fill splitter-line"></span>
+  </div>
+</div>
+
+<ul class="list list-normal flex with_columns">
+  {{#each model.assignments as |assignment|}}
+    {{#link-to 'courses.show.assignments.show' assignment class='list-normal-item block'}}
+      <span class="pre-link">{{assignment.dueDate}}</span>
+      <h3>{{assignment.name}}</h3>
+      <p>The assignmet description will appear here</p>
+    {{/link-to}}
+    {{#link-to 'courses.show.assignments.show' assignment class='list-normal-item block'}}
+      <span class="pre-link">{{assignment.dueDate}}</span>
+      <h3>{{assignment.name}}</h3>
+      <p>The assignmet description will appear here</p>
+    {{/link-to}}
+    {{#link-to 'courses.show.assignments.show' assignment class='list-normal-item block'}}
       <span class="pre-link">{{assignment.dueDate}}</span>
       <h3>{{assignment.name}}</h3>
       <p>The assignmet description will appear here</p>
