--- a/app/templates/courses/show/discussions/topic/post.hbs
+++ b/app/templates/courses/show/discussions/topic/post.hbs
@@ -1,1 +1,9 @@
-This is a test
+<div class="card-container">
+  <h3>{{post.title}}</h3>
+</div>
+
+<ul class="list list-normal flex with_columns">
+  {{#each post.comments as |comment|}}
+    <p class="list-normal-item block">{{comment.text}}</p>
+  {{/each}}
+</ul>
