Ability to post comments

--- a/app/templates/courses/show/discussions/topic/index.hbs
+++ b/app/templates/courses/show/discussions/topic/index.hbs
@@ -1,6 +1,7 @@
 <div class="card-container">
+
   <div class="flex end">
-  {{link-to 'New Post' 'courses.show.discussions.topic.new' (query-params forum_id=model.id) class='btn btn-primary'}}
+  {{link-to 'New Post' 'courses.show.discussions.topic.new' (query-params topic_id=model.id) class='btn btn-primary'}}
   </div>
 
   <div class="splitter flex fill flex-center">
