--- a/app/templates/courses/show/discussions/topic/post.hbs
+++ b/app/templates/courses/show/discussions/topic/post.hbs
@@ -4,6 +4,15 @@
 
 <ul class="list list-normal flex with_columns">
   {{#each post.comments as |comment|}}
-    <p class="list-normal-item block">{{comment.text}}</p>
+    <p class="list-normal-item block">{{comment.user.email}}: {{comment.text}}</p>
   {{/each}}
 </ul>
+
+<div class="flex with_rows">
+  <div class="flex fill">
+    {{input value=commentText placeholder="Add comment" class='comment-box'}}
+  </div>
+  <div class="flex end">
+    <button class='btn btn-primary' {{action "addComment"}}>Send</button>
+  </div>
+</div>
