--- a/app/styles/app/base.css
+++ b/app/styles/app/base.css
@@ -60,6 +60,10 @@ select:focus {
     outline: none;
 }
 
+.screen-height {
+  height: 100vh;
+}
+
 /* Forms */
 .form-item {
   margin: 15px 0;
@@ -216,7 +220,9 @@ a {
 
 .list-container {
   width: 90%;
-  margin: 10px auto 50px auto;
+  padding-top: 10px;
+  padding-bottom: 50px;
+  margin: 0 auto;
 }
 
 .list-normal {
@@ -413,6 +419,10 @@ a {
 }
 
 /* Discussions */
+.comment-editor {
+  height: 50px;
+}
+
 .comment-box {
   width: 100%;
   margin-right: 15px;
