--- a/app/templates/components/discussion-messages.hbs
+++ b/app/templates/components/discussion-messages.hbs
@@ -1,6 +1,6 @@
-<div id="message-list">
+<div>
   <ul class="list list-normal flex with_columns">
-    {{#each comments as |comment|}}
+    {{#each sortedComments as |comment|}}
       <p class="list-normal-item block">{{comment.user.email}}: {{comment.text}}</p>
     {{/each}}
   </ul>
