--- a/app/styles/app/base.css
+++ b/app/styles/app/base.css
@@ -60,10 +60,6 @@ select:focus {
     outline: none;
 }
 
-.screen-height {
-  height: 100vh;
-}
-
 /* Forms */
 .form-item {
   margin: 15px 0;
@@ -94,11 +90,6 @@ select:focus {
   background-color: #edf4f7;
 }
 
-.screen-height {
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
-}
 .screen-width {
   min-width: 100vw;
 }
@@ -346,7 +337,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: white;
-  box-shadow: 0px 4px 10px #cacaca;
+  border: 1px solid #e0e0e0;
   border-radius: 2px;
 }
 
@@ -419,6 +410,10 @@ a {
 }
 
 /* Discussions */
+#discussion-messages-component {
+  height: 450px;
+}
+
 .comment-editor {
   height: 50px;
 }
