--- a/app/templates/components/discussion-messages.hbs
+++ b/app/templates/components/discussion-messages.hbs
@@ -1,7 +1,7 @@
-<div>
-  <ul class="list list-normal flex with_columns">
-    {{#each sortedComments as |comment|}}
-      <p class="list-normal-item block">{{comment.user.email}}: {{comment.text}}</p>
-    {{/each}}
-  </ul>
-</div>
+{{#paginator-reloader reachedTop=(perform fetchComments)}}
+    <ul class="list list-normal flex with_columns">
+      {{#each sortedComments as |comment|}}
+        <p class="list-normal-item block">{{comment.user.email}}: {{comment.text}}</p>
+      {{/each}}
+    </ul>
+{{/paginator-reloader}}
