Initial pages for projects

--- a/app/templates/components/root-nav.hbs
+++ b/app/templates/components/root-nav.hbs
@@ -9,6 +9,12 @@
     <li class="nav-item">
       {{nav-item name='Courses' icon='courses' route='courses'}}
     </li>
+    <li class="nav-item">
+      {{nav-item name='Chat' icon='courses' route='chat'}}
+    </li>
+    <li class="nav-item">
+      {{nav-item name='Projects' icon='courses' route='projects'}}
+    </li>
   </ul>
   <div class="account-link flex-bottom">
 
