--- a/app/templates/courses/show.hbs
+++ b/app/templates/courses/show.hbs
@@ -1,4 +1,4 @@
-{{courses-nav courses=model}}
+{{navs/courses-nav courses=model}}
 <div class="content flex fill with_columns">
   <div class="scrolls">
     <div class="list-container flex with_columns {{if usingWYSIWYG 'screen-height'}}">
