--- a/app/templates/projects/index.hbs
+++ b/app/templates/projects/index.hbs
@@ -1,10 +1,10 @@
 <div class="flex with_rows">
-  {{navs/courses-nav courses=model}}
+  {{navs/projects-nav projects=model}}
   <div class="content scrolls flex fill with_columns">
     <div class="list-container flex flex-center">
       <div>
         <img src='assets/images/courses.svg' class="indicator-icon">
-        Choose a course
+        Choose a project
       </div>
     </div>
   </div>
