Add submission page and create POST link

--- a/app/templates/courses/show.hbs
+++ b/app/templates/courses/show.hbs
@@ -5,9 +5,9 @@
       {{search-bar}}
       <div class="card-titles-container">
         <ul class="card-titles-list">
-          <li>{{link-to 'Home' 'courses.show.index' course.id class="card-titles-list-link"}}</li>
-          <li>{{link-to 'Assignments' 'courses.show.assignments' course.id class="card-titles-list-link"}}</li>
-        <li>{{link-to 'Discussions' 'courses.show.discussions' course.id class="card-titles-list-link"}}</li>
+          <li>{{link-to 'Home' 'courses.show.index' class="card-titles-list-link"}}</li>
+          <li>{{link-to 'Assignments' 'courses.show.assignments' class="card-titles-list-link"}}</li>
+          <li>{{link-to 'Discussions' 'courses.show.discussions' class="card-titles-list-link"}}</li>
         </ul>
       </div>
       <div class="card flex with_columns fill">
